@@ -1,6 +1,6 @@
 Name: bim
-Version: 1.1.0
-Date: 2012-10-21
+Version: 1.1.1
+Date: 2012-10-26
 Author: Carlo de Falco, Culpo Massimiliano
 Maintainer: Carlo de Falco
 Title: PDE Solver using a Finite Element/Finite Volume approach
